// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot of the base state 1`] = `
<DocumentFragment>
  <div
    class="mds-select"
  >
    <button
      aria-controls="mds-select-list"
      aria-haspopup="true"
      class="mds-select__label"
      data-testid="mds-select-button"
    >
      <p
        class="mds-text mds-text-base"
      >
        Please select an option
      </p>
      <svg
        class="mds-select__caret mds-select__caret--close"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.5 8.25l-7.5 7.5-7.5-7.5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
    <ul
      aria-hidden="false"
      class="mds-select__overlay "
      id="mds-select-list"
      role="menu"
      style="top: 0px;"
    >
      <li
        aria-label="bda hs"
        class="mds-select__option
                        
                        
                    "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="mds-text mds-text-base"
        >
          bda hs
        </p>
      </li>
      <li
        aria-label="bsahc"
        class="mds-select__option
                        
                        
                    "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="mds-text mds-text-base"
        >
          bsahc
        </p>
      </li>
      <li
        aria-label="jkhasda"
        class="mds-select__option
                        
                        
                    "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="mds-text mds-text-base"
        >
          jkhasda
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`snapshot of the selected option state 1`] = `
<DocumentFragment>
  <div
    class="mds-select"
  >
    <button
      aria-controls="mds-select-list"
      aria-haspopup="true"
      class="mds-select__label"
      data-testid="mds-select-button"
    >
      <p
        class="mds-text mds-text-base"
      >
        bda hs
      </p>
      <svg
        class="mds-select__caret mds-select__caret--close"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.5 8.25l-7.5 7.5-7.5-7.5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
    <ul
      aria-hidden="false"
      class="mds-select__overlay "
      id="mds-select-list"
      role="menu"
      style="top: 0px;"
    >
      <li
        aria-checked="true"
        aria-label="bda hs"
        class="mds-select__option
                        mds-select__option--selected
                        
                    "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="mds-text mds-text-base"
        >
          bda hs
        </p>
        <svg
          fill="none"
          height="1rem"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 12.75l6 6 9-13.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </li>
      <li
        aria-label="bsahc"
        class="mds-select__option
                        
                        
                    "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="mds-text mds-text-base"
        >
          bsahc
        </p>
      </li>
      <li
        aria-label="jkhasda"
        class="mds-select__option
                        
                        
                    "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="mds-text mds-text-base"
        >
          jkhasda
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`snapshot of the selected option state 2`] = `
<DocumentFragment>
  <div
    class="mds-select"
  >
    <button
      aria-controls="mds-select-list"
      aria-expanded="true"
      aria-haspopup="true"
      class="mds-select__label"
      data-testid="mds-select-button"
    >
      <p
        class="mds-text mds-text-base"
      >
        Please select an option
      </p>
      <svg
        class="mds-select__caret mds-select__caret--open"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.5 8.25l-7.5 7.5-7.5-7.5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
    <ul
      class="mds-select__overlay mds-select__overlay--open"
      id="mds-select-list"
      role="menu"
      style="top: 0px;"
    >
      <li
        aria-label="bda hs"
        class="mds-select__option
                        
                        
                    "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="mds-text mds-text-base"
        >
          bda hs
        </p>
      </li>
      <li
        aria-label="bsahc"
        class="mds-select__option
                        
                        
                    "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="mds-text mds-text-base"
        >
          bsahc
        </p>
      </li>
      <li
        aria-label="jkhasda"
        class="mds-select__option
                        
                        
                    "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="mds-text mds-text-base"
        >
          jkhasda
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
